[GowriK] Refactor : refactor the swagger documentation for remaining api's
